--- a/wp-content/themes/anomeo/assets/scss/main.scss
+++ b/wp-content/themes/anomeo/assets/scss/main.scss
@@ -506,11 +506,12 @@
             &.open {
                 .bar:nth-of-type(1) {
                     transform: rotate(45deg);
+                    transform-origin: 5px -1px;
                 }
 
                 .bar:nth-of-type(3) {
                     transform: rotate(-45deg);
-                    transform-origin: 9px 5px;
+                    transform-origin: 3px 3px;
                 }
 
                 .bar:nth-of-type(2) {
@@ -1893,7 +1894,7 @@
             @include media-breakpoint-down(sm) {
                 left: 0;
                 bottom: -40px;
-                padding: 13px 30px;
+                padding: 13px 27px;
 
                 font-size: 20px;
             }
@@ -6556,7 +6557,7 @@
         font-size: 30px;
     }
 
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-up(xxl) {
         font-size: 50px;
     }
 
@@ -7151,6 +7152,9 @@
 
         .contact_social {
             margin-top: 90px;
+             @include media-breakpoint-down(sm) {
+                margin-top: 0;
+            }
         }
 
         .contact_social--img {
@@ -8854,7 +8858,7 @@
                 }
 
                 @include media-breakpoint-down(sm) {
-                   padding: 25px 60px 25px 35px;
+                   padding: 25px 80px 25px 35px;
                    font-size: 20px;
                 }
 
@@ -8894,6 +8898,8 @@
 
                 @include media-breakpoint-down(sm) {
                    right: 35px;
+                   font-size: 35px;
+                   top: 30%;
                  }
 
                  @include media-breakpoint-up(xxl) {
