--- a/wp-content/themes/anomeo/assets/scss/main.scss
+++ b/wp-content/themes/anomeo/assets/scss/main.scss
@@ -1888,7 +1888,7 @@
             }
 
             @include media-breakpoint-up(xxl) {
-                padding: 24px 52px;
+                padding: 24px 52px 23px;
                 border-radius: 45px;
                 font-size: 25px;
             }
