--- a/wp-content/themes/anomeo/assets/scss/main.scss
+++ b/wp-content/themes/anomeo/assets/scss/main.scss
@@ -8007,7 +8007,7 @@
         text-transform: uppercase;
 
         @include media-breakpoint-up(xxl) {
-           font-size: 28px!important;
+           font-size: 26px!important;
         }
 
         @include media-breakpoint-down(sm) {
@@ -8065,6 +8065,8 @@
             border: 1px solid #E6E6E6;
             position: relative;
         }
+
+        
     }
 
 
@@ -8076,6 +8078,10 @@
         @include media-breakpoint-down(sm) {
             font-size: 14px!important;
         }
+
+        @include media-breakpoint-up(xxl) {
+            font-size: 26px!important;
+         }
     }
 }
 
@@ -9846,6 +9852,7 @@
         right: 37px;
         top: auto;
         bottom: 37px;
+        z-index: 1;
     }
     // @include media-breakpoint-up(xxl) {
     //     right: -60px;
@@ -9886,10 +9893,18 @@
             font-size: 16px!important;
         }
 
+        @include media-breakpoint-up(xxl) {
+            font-size: 22px!important;
+        }
+
         &:after{
             @include media-breakpoint-down(sm) {
                 right: 45px;
             }
+            @include media-breakpoint-up(xxl) {
+                right: 0;
+            }
+    
         }
     }
 
@@ -9900,9 +9915,15 @@
             font-size: 16px!important;
         }
 
+      
+
         p{
             @include media-breakpoint-down(sm) {
                 font-size: 16px!important;
+            }
+
+            @include media-breakpoint-up(xxl) {
+                font-size: 22px!important;
             }
         }
     }
